--- a/index.html
+++ b/index.html
@@ -527,7 +527,24 @@
                      </li>
                 </ul>
             </div>
-            
+
+            <form class="form-field">
+                <p class="footer-title">Підпишіться на розсилку</p>
+                <label class="form-label">        
+                    <input 
+                         class="form-input"
+                         type="email"
+                         name="subscribe-field"
+                         placeholder="E-mail">
+                    <button class="form-btn" type="submit">
+                        Підписатися
+                        <!-- <span class="btn-form-text"></span>  -->
+                        <svg class="telega-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-telegram"></use>
+                        </svg>
+                    </button>
+                </label>
+            </form> 
         </div>  
    </footer>
 
@@ -537,10 +554,39 @@
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button class="close-btn" type="button" data-modal-close>
-                 <svg>
+                 <svg class="modal-close-svg">
                     <use href="./images/nav-social-sprite.svg#icon-close-btn"></use>
                  </svg>
             </button>
+            <div class="modal-form-list">
+                <p class="modal-title"> Залиште свої дані, ми вам передзвонимо</p>
+                <form action="">
+                    <label class="">
+                        <span class="title-field">Ім'я</span>
+                        <input type="text" class="modal-field">
+                        <svg>
+                            <use></use>
+                        </svg>
+                    </label>
+
+                    <label class="">
+                        <span class="title-field">Телефон</span>
+                        <input type="text" class="modal-field">
+                        <svg>
+                            <use></use>
+                        </svg>
+                    </label>
+
+                    <label class="">
+                        <span class="title-field">Пошта</span>
+                        <input type="text" class="modal-field">
+                        <svg>
+                            <use></use>
+                        </svg>
+                    </label>
+                </form>
+            </div>
+           
         </div> 
     </div>
     <script src="./js/modal.js"></script>
