--- a/portfolio.html
+++ b/portfolio.html
@@ -344,7 +344,23 @@
                      </li>
                 </ul>
             </div>
-            
+            <form class="form-field">
+                <p class="footer-title">Підпишіться на розсилку</p>
+                <label class="form-label">        
+                    <input 
+                         class="form-input"
+                         type="email"
+                         name="subscribe-field"
+                         placeholder="E-mail">
+                    <button class="form-btn" type="submit">
+                        Підписатися
+                        <!-- <span class="btn-form-text"></span>  -->
+                        <svg class="telega-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-telegram"></use>
+                        </svg>
+                    </button>
+                </label>
+            </form> 
         </div>  
    </footer>
 </body>
